+ Converted loading of project tasks to asnycronous loading
+ Converted loading of timetracker to asyncronous loading
+ Converted loading of milestones to asyncronous loading
+ Converted loading of messages to asyncronous loading
+ Made adding of projects asyncronous
+ Project tasks are now arranged as a block accordion
+ Rewrote accordion code to no longer depend on prototype.js

Collabtive 2.1
+ Removed accordion-related JS legacy code from desktop
+ Added default charset to all create table statements
+ Removed creation of unnecessary table
+ Added collation info to install-readme files
+ Fixed bug in start date vs. end date comparison when adding or editing a task
+ Fixed bug to return correct customer for a project
+ Made customer selection available in admin area
+ Localized customer-related labels and labels for the installation procedure
+ More SQL queries use prepared statements now
+ Remove file upload for IE versions 9 and older
+ Removed several calls to htmlspecialchars(). they are obsoleted by the html purifier lib and caused issues
+ Removed several calls to stripslashes(). they are obsoleted by html purifier
+ Fixed a problem with ambiguous field names
+ Fixed a missing GROUP BY clause
+ Implemented SQLite support. It can be chosen in the installer.
+ Removed the tags class for good.
+ Add folder /files/standard/ics/ to the installation package
+ Removed call to file_exists in getArrayVal() - it worked around an edge case in the installer. This safes a lot of calls to file_exists()
+ Fixed a bug that prevented files from being attached to messages
+ Fix the link in the file-uploaded email notification
+ Made mylog object global. This safes a lot of object instantiations and improves performance. (srichter)
+ Reuse $myOpenProjects from init.php in index.php , improving performance (srichter)
+ Improved SSL recognition (srichter)
+ Improved the timetracker widget on the project dashboard to alternatively take working hours directly as input