@@ -408,6 +408,7 @@ attachbutton = Anhängen
 by = Erstellt von
 cancel = Abbrechen
 chat = Chat
+changeallduedates = Alle Fristen anpassen
 chooseone = Bitte wählen
 close = Abschließen
 closeall = Alle zuklappen
