@@ -412,6 +412,7 @@ assigned = assigned
 attachbutton = Attach
 by = By
 cancel = Cancel
+changeallduedates = Adapt all due dates
 chat = Chat
 chooseone = Please choose
 close = Close
